--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "css:compress": "css-minify -f src/css/main.css -o src/css",
     "css:build": "npm-run-all css:compile css:prefix css:compress"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -47,6 +46,7 @@
     "css-minify": "^2.0.0",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^10.1.0",
+    "react-router-dom": "^6.8.2",
     "sass": "^1.58.0"
   }
 }
